5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1723_2508.log
== TEST (2019-05-11 11:08:12) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n >):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 6
    while(n >):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:08:25) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:08:44) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
		i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:09:08) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:09:16) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1
print(round(soma,8)))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:10:07) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:10:28) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 0
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:12:37) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:13:01) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-133.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:13:11) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-133.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:13:15) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**1)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-133.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:13:39) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
16.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:13:54) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 0
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:14:04) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
16.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:14:40) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n-1 > i):
	soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-28.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:16:16) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n - 1 > i):
	soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-28.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:16:23) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n - 1 > i):
	soma = soma + (4 * (-1)**i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-28.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:19:45) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n - 1 > i):
	soma = soma + (4 * (-1)**2i)/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- ERROR:
File "XXXX", line 7
    soma = soma + (4 * (-1)**2i)/(2*i) * (2*i + 1) * (2*i +2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:20:03) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n - 1 > i):
	soma = soma + (4 * (-1)**(2*i))/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
94.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:20:53) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**(2*i))/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
139.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:22:06) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	soma = soma + (4 * (-1)**(i + 1))/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:23:25) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i <= n):
	soma = soma + (4 * (-1)**(i + 1))/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:23:27) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i <= n):
	soma = soma + (4 * (-1)**(i + 1))/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:23:51) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i > n):
	soma = soma + (4 * (-1)**(i + 1))/(2*i) * (2*i + 1) * (2*i +2)
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:26:15) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i > n):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:26:39) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i > n-1):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:26:44) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i > n-1):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:26:51) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i > n-1):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:28:17) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i > n +1):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:28:36) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i >= n +1):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:28:44) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i >= n +1):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:29:02) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i/(2*i) * (2*i + 1) * (2 i +2)

while(i >= n):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:30:21) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(i < n):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:30:35) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(i < n):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:30:48) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(i < n):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 11:30:55) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(i < n):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.171869
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 11:31:31) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n >i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.156871
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 11:31:38) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.162404
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:31:38) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 11:31:44) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.189502
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:08) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:18) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:27:23) 
-- CODE:
n = int(input("insira o numero:"))
soma = 3
i = 1
#termogeral = 4 * (-1)**i + 1/(2*i) * (2*i + 1) * (2 i +2)

while(n > i):
	tg = (2*i) * (2*i + 1) * (2*i +2)
	soma = soma + (4 * (-1)**(i + 1))/tg
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.168551
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
